--- a/src/dotnet/apps/face-demo/Face.Demo.Web/_Imports.razor
+++ b/src/dotnet/apps/face-demo/Face.Demo.Web/_Imports.razor
@@ -2,6 +2,7 @@
 @using System.Net.Http.Json
 @using System.Threading.Tasks
 @using Microsoft.AspNetCore.Components
+@using Microsoft.AspNetCore.Components.Routing
 @using MudBlazor
 @using Face.Demo.Web
 @using Face.Demo.Web.Services
@@ -12,3 +13,8 @@
 @using Face.Demo.Web.Auth
 
 @using Face.Demo.Web.Models
+
+@using Face.Demo.Web.Pages
+
+@using Face.Contracts.Tests
+@using Microsoft.AspNetCore.Authorization
