--- a/src/dotnet/apps/face-demo/Face.Demo.Web/Pages/Test/Preprocess.razor
+++ b/src/dotnet/apps/face-demo/Face.Demo.Web/Pages/Test/Preprocess.razor
@@ -14,7 +14,7 @@
                   FullWidth="true"
                   Placeholder="data:image/png;base64,... یا فقط رشته Base64" />
 
-    <MudCheckBox @bind-Checked="_returnDebug" Label="برگشت اطلاعات Debug" Class="mt-2" />
+    <MudCheckBox @bind-Value="_returnDebug" Label="برگشت اطلاعات Debug" Class="mt-2" />
 
     <MudButton Variant="Variant.Filled"
                Color="Color.Primary"
