--- a/src/dotnet/apps/face-demo/Face.Demo.Web/Pages/_Host.cshtml
+++ b/src/dotnet/apps/face-demo/Face.Demo.Web/Pages/_Host.cshtml
@@ -9,15 +9,33 @@
 <html lang="fa" dir="rtl">
 <head>
     <meta charset="utf-8" />
-    <title>Face Platform Demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Face Demo</title>
     <base href="~/" />
-    <link rel="stylesheet" href="css/site.css" />
-    <link rel="stylesheet" href="_content/MudBlazor/MudBlazor.min.css" />
+
+    <link href="css/site.css" rel="stylesheet" />
+
+    <!-- Bootstrap 5 (optional, برای هماهنگی با Layout) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          crossorigin="anonymous">
 </head>
 <body>
     <app>
-        @(await Html.RenderComponentAsync<App>(RenderMode.ServerPrerendered))
+        <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
+
+    <div id="blazor-error-ui">
+        <environment include="Staging,Production">
+            An error has occurred. This application may no longer respond until reloaded.
+        </environment>
+        <environment include="Development">
+            An unhandled exception has occurred. See browser dev tools for details.
+        </environment>
+        <a href="" class="reload">Reload</a>
+        <a class="dismiss">🗙</a>
+    </div>
 
     <script src="_framework/blazor.server.js"></script>
 </body>
